--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -71,8 +71,13 @@ services:
 
 
   discount.api:
+    container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+      - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+      - discountdb
     ports:
-      - "80"
+      - "8002:80"
 
